@@ -31,6 +31,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - don't exit if mlockall sets errno ENOSYS (function not implemented)
   e - add "other" resource to pelog's 5th argument
   b - stop possible memory corruption with an invalid request type (StockholmU)
+  b - correct Resource_list in qstat XML output (NCIFCRF)
 
 2.1.6
   b - freebsd5 build fix
